# podop

./: .dockerignore  .gitignore  404.html  MY_NOTES.md  README.md  docker-compose.yaml  index.html  instructions.md  objects.inv
.github/workflows/: actions.yaml
api_reference/game_domain_layer/controllers/: index.html
api_reference/game_domain_layer/game_config/: index.html
api_reference/game_domain_layer/models/: index.html
api_reference/game_domain_layer/scheduler/: index.html
api_reference/generic_library/: index.html
api_reference/presentation_layer/: index.html
back/: .coveragerc  Dockerfile  mkdocs.yml  pyproject.toml
back/docs/: index.md  reference.md
back/src/back/: __init__.py  __main__.py  config.py  game.py  scheduler.py
back/src/back/api/: monitoring.py  routes.py
back/src/back/controllers/: game.py  game_stats_mixin.py  player.py  robot.py  trading_resource_game.py  transaction_analyser_mixin.py  transaction_listener.py
back/src/back/models/: counts_history.py  errors.py  inventory.py  ressources.py  transaction.py  warehouse.py
back/src/back/patterns/: publish_subscribe.py
back/tests/: __main__.py  conftest.py
back/tests/fixtures/: reset_game.py
back/tests/unit/: test_scheduler.py
back/tests/unit/controllers/: test_game_stats_mixin.py  test_robot.py  test_transaction_analyser_mixin.py
back/tests/unit/models/: test_counts_history.py  test_ressources.py  test_transaction.py
back/tools/: coverage-diff.sh
conclusion/: index.html
coverage/: covindex.html  d_002c493ad4b8202f___init___py.html  d_002c493ad4b8202f_back_py.html  d_002c493ad4b8202f_reset_game_py.html  d_031cadd075307b35___init___py.html  d_031cadd075307b35___main___py.html  d_031cadd075307b35_config_py.html  d_031cadd075307b35_scheduler_py.html  d_0405c58bafe0c210___init___py.html  d_0405c58bafe0c210_counts_history_py.html  d_0405c58bafe0c210_errors_py.html  d_0405c58bafe0c210_inventory_py.html  d_0405c58bafe0c210_ressources_py.html  d_0405c58bafe0c210_transaction_py.html  d_0405c58bafe0c210_warehouse_py.html  d_08beb5f1e55fcbf2___init___py.html  d_08beb5f1e55fcbf2_monitoring_py.html  d_08beb5f1e55fcbf2_routes_py.html  d_17bd492d087794b9_test_config_py.html  d_17bd492d087794b9_test_scheduler_py.html  d_2dfffaa3a7d140f7___init___py.html  d_2dfffaa3a7d140f7_dict_facilities_py.html  d_2dfffaa3a7d140f7_logger_py.html  d_2dfffaa3a7d140f7_singleton_py.html  d_2dfffaa3a7d140f7_yaml_py.html  d_5e20861fb3bd771f___init___py.html  d_5e20861fb3bd771f_game_py.html  d_5e20861fb3bd771f_game_stats_mixin_py.html  d_5e20861fb3bd771f_player_py.html  d_5e20861fb3bd771f_robot_py.html  d_5e20861fb3bd771f_trading_resource_game_py.html  d_5e20861fb3bd771f_transaction_analyser_mixin_py.html  d_5e20861fb3bd771f_transaction_listener_py.html  d_5e2c398916691449_test_publish_subscribe_py.html  d_6ef840051b5457a0___init___py.html  d_6ef840051b5457a0_logger_py.html  d_6ef840051b5457a0_singleton_py.html  d_711953b4208897cb_test_routes_py.html  d_967d9b58b5229085___init___py.html  d_967d9b58b5229085_test_counts_history_py.html  (+38 more)
development/contributing/: index.html
front/: package-lock.json  package.json
front/components/: Chart.js  Chart1.js
front/pages/: index.js  index1.js
reference/: index.html
search/: search_index.json
usage/: index.html
